--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       
       <div class="right bg-white p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold mb-4">Education</h2>
-        <ul class="space-y-2 text-grey-800">
-          <li><strong class="text-gray-900">Bachelor of Computers Application</strong> - 2023 (85%)</li>
-          <li class="text-grey-900">Intermediate (CEC) - 2020 (75%)</li>
-          <li class="'text-gray-900">SSC - 2018 (85%)</li>
+        <ul class="space-y-2">
+          <li><strong >Bachelor of Computers Application</strong> - 2023 (85%)</li>
+          <li>Intermediate (CEC) - 2020 (75%)</li>
+          <li>SSC - 2018 (85%)</li>
         </ul>
       </div>
     </div>
