--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Frontend Developer">
+  <title>Dariyabi Shaik</title>
   <meta property="og:title" content="Frontend Developer" />
 <meta property="og:description" content="Dariyabi Shaik with experience of 2yrs specilization with React, JavaScript, Redux, HTML, CSS" />
 <meta property="og:image" content="/Dariyabi.jpeg" />
-    <title>Dariyabi Shaik - Frontend Developer</title>
+   
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
