--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dariyabi Shaik</title>
-  <meta name="description" content="Frontend Developer">
- 
-  <meta property="og:title" content="Frontend Developer" />
-<meta property="og:description" content="Dariyabi Shaik with experience of 2yrs specilization with React, JavaScript, Redux, HTML, CSS" />
-<meta property="og:image" content="/Dariyabi.jpeg" />
-   
+  <meta 
+    name="description" 
+    content="FrontEnd engineer | React.js| HTMLand CSS"/>
+    <meta property="og:title" content="Dariyabi shaik | FrontEnd Developer" />
+    <meta property="og:description" content="FrontEnd Developer  with Experience of 2 years in specialigation of Javascript| HTML and CSS| React" />
+    <meta property="og:image" content="https://images.pexels.com/photos/15987197/pexels-photo-15987197/free-photo-of-a-woman-in-overalls-and-hat-holding-flowers.jpeg?auto=compress&cs=tinysrgb&w=600" />
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
