again adding image

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
   <meta 
     name="description" 
-    content="FrontEnd engineer | React.js| HTMLand CSS"/>
-    <meta property="og:title" content="Dariyabi shaik | FrontEnd Developer" />
-    <meta property="og:description" content="FrontEnd Developer  with Experience of 2 years in specialigation of Javascript| HTML and CSS| React" />
-    <meta property="og:image" content="https://images.pexels.com/photos/15987197/pexels-photo-15987197/free-photo-of-a-woman-in-overalls-and-hat-holding-flowers.jpeg?auto=compress&cs=tinysrgb&w=600" />
+    content="FrontEnd engineer | React.js | HTML and CSS"/>
+  <meta property="og:title" content="Dariyabi Shaik | FrontEnd Developer" />
+  <meta property="og:description" content="FrontEnd Developer with 2 years of experience specializing in JavaScript | HTML and CSS | React" />
+  <meta property="og:image" content="https://images.pexels.com/photos/15987197/pexels-photo-15987197/free-photo-of-a-woman-in-overalls-and-hat-holding-flowers.jpeg?auto=compress&cs=tinysrgb&w=600" />
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
