--- a/index.html
+++ b/index.html
@@ -3,13 +3,37 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta 
-    name="description" 
-    content="FrontEnd engineer | React.js | HTML and CSS"/>
+  
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  
+  <meta name="description" content="Frontend engineer | React.js | HTML and CSS with 2 years of experience in building responsive and user-friendly applications." />
+  <meta name="keywords" content="Frontend Developer, React.js, JavaScript, HTML, CSS, Redux, Tailwind CSS, TypeScript, Responsive Design" />
+  <meta name="author" content="Dariyabi Shaik" />
+  
+  
   <meta property="og:title" content="Dariyabi Shaik | FrontEnd Developer" />
-  <meta property="og:description" content="FrontEnd Developer with 2 years of experience specializing in JavaScript | HTML and CSS | React" />
+  <meta property="og:description" content="FrontEnd Developer with 2 years of experience specializing in JavaScript, React.js, HTML, and CSS. Explore my projects, work experience, and skills!" />
   <meta property="og:image" content="https://images.pexels.com/photos/15987197/pexels-photo-15987197/free-photo-of-a-woman-in-overalls-and-hat-holding-flowers.jpeg?auto=compress&cs=tinysrgb&w=600" />
+  <meta property="og:url" content="https://www.linkedin.com/in/dariyabi-shaik" />
+  <meta property="og:type" content="website" />
+  
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Dariyabi Shaik | FrontEnd Developer" />
+  <meta name="twitter:description" content="FrontEnd Developer with 2 years of experience specializing in React.js, JavaScript, HTML, and CSS. Check out my work and skills!" />
+  <meta name="twitter:image" content="https://images.pexels.com/photos/15987197/pexels-photo-15987197/free-photo-of-a-woman-in-overalls-and-hat-holding-flowers.jpeg?auto=compress&cs=tinysrgb&w=600" />
+  
+  
+  <link rel="icon" type="image/png" href="favicon.png" />
+  
+  <title>Dariyabi Shaik - Frontend Developer</title>
+  
+  
   <link rel="stylesheet" href="style.css">
+  
+  
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
