--- a/index.html
+++ b/index.html
@@ -40,22 +40,23 @@
 <body class="bg-grey-100 text-grey-800">
   <div class="container mx-auto p-6">
 
-    <div class="header flex flex-col md: flex-row justify-between items-center bg-blue-500  text-white p-6 rounded-lg shadow-md">
-      <div>
+    <div class="header flex flex-col md:flex-row justify-between items-center bg-blue-500 text-white p-6 rounded-lg shadow-md">
+      <div class="flex flex-col items-center md:items-start">
         <h2 class="text-2xl font-bold">Dariyabi Shaik</h2>
+        <img class="rounded-full w-32 h-32 mt-4" src="Dariybi.jpeg" alt="Dariyabi Shaik">
         <p class="mt-2">Email: shaikdariyabi256@gmail.com | Phone: +91-9381424264</p>
         <p class="mt-1"><a href="https://www.linkedin.com/in/dariyabi-shaik" target="_blank">LinkedIn Profile</a></p>
       </div>
       <div>
         <ul class="nav flex space-x-4 mt-4 md:mt-0">
-          <li class="hover:text-blue-300 cursor-pointer" >Home /</li>
+          <li class="hover:text-blue-300 cursor-pointer">Home /</li>
           <li class="hover:text-blue-300 cursor-pointer">Projects /</li>
           <li class="hover:text-blue-300 cursor-pointer">Skills /</li>
           <li class="hover:text-blue-300 cursor-pointer">Contact</li>
         </ul>
       </div>
     </div>
-
+    
     
     <div class="title text-center my-10">
       <h1 class="text-4xl font-bold text-gray-900">Frontend Developer</h1>
