--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="header flex flex-col md:flex-row justify-between items-center bg-blue-500 text-white p-6 rounded-lg shadow-md">
       <div class="flex flex-col items-center md:items-start">
         <h2 class="text-2xl font-bold">Dariyabi Shaik</h2>
-        <img class="rounded-full w-32 h-32 mt-4" src="Dariybi.jpeg" alt="Dariyabi Shaik">
+        <img class="rounded-full w-32 h-32 mt-4" src="Dariybi.jpeg">
         <p class="mt-2">Email: shaikdariyabi256@gmail.com | Phone: +91-9381424264</p>
         <p class="mt-1"><a href="https://www.linkedin.com/in/dariyabi-shaik" target="_blank">LinkedIn Profile</a></p>
       </div>
