--- a/index.html
+++ b/index.html
@@ -1,93 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="favicon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dariyabi shaik</title>
+    <meta
+      name="description"
+      content="Frontend Engineer | ReactJS | JavaScript | HTML & CSS | Web Development"
+    />
+    <meta property="og:title" content="Dariyabi Shaik| Frontend Engineer" />
+    <meta
+      property="og:description"
+      content="Frontend engineer with experienc of 2 years in specialization of Javasctript, React, Redux, Tailwindcss and HTML & CSS"
+    />
+    <meta property="og:image" content="/dariyabi.jpeg" />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dariyabi Shaik</title>
-  <link rel="stylesheet" href="index.css">
-  <meta name="description" content="Frontend developer | React.js | JavaScript | HTML & CSS" />
-  <meta property="og:title" content="Dariyabi Shaik | Frontend Developer" />
-  <meta property="og:description"
-    content="Frontend developer with 2 years of experience in JavaScript, React, Redux, TailwindCSS, HTML & CSS" />
-  <meta property="og:image" content="/Dariyabi.jpg" />
-</head>
-
-<body>
-
-  <div class="container">
-    <header class="header">
-      <div>
-        <h2>Dariyabi Shaik</h2>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="mx-auto flex justify-center bg-gray-100 gap-6">
+    <div class="w-1/4">
+      <div class="h-auto w-full max-w-screen-md border-2 border-black">
+        <div class=" text-center mt-8">
+          <h4 class="text-lg">Dariyabi Shaik </h4>
+          <h4 class="text-lg">Home / Project / Article / Contact</h4>
+        </div>
+        <div class="flex items-center justify-center pb-24 py-24">
+          <h1 class="text-4xl italic">Frontend Developer</h1>
+        </div>
+        <div class="flex border-t-2 border-b-2 border-black">
+          <div class="w-76">
+            <h3 class="border-b-2 border-black p-2 text-lg italic">projects</h3>
+            <p class="border-b-2 border-black p-2">HTML only Portfolio</p>
+            <p class="border-b-2 border-black p-2">Calculator</p>
+            <p class="border-b-2 border-black p-2">Quiz App</p>
+            <p class="border-b-2 border-black p-2">Countdown Timer</p>
+            <p class="border-b-2 border-black p-2">Product Upcominig Page</p>
+            <div class="border-b-2 border-black p-2">
+              <h3 class="text-lg italic">Work Experience</h3>
+              <p>roadmap.sh</p>
+              <p>Solved all the frontend projects</p>
+              <a
+                href="www.linkedin.com/in/dariyabi-shaik"
+                style="text-decoration: underline; color: blue"
+                >Visit my LinkedIn profile
+              </a>
+            </div>
+            <div>
+              <h4 class="p-2">Open Source Work</h4>
+              <p class="p-2">
+                Contributed to 50 opensource projects. Made my own projects with
+                200 GitHub Stars.
+              </p>
+              <a
+                class="p-2 underline text-blue-700"
+                href="https://github.com/shaikdariyabi/react-manipulation"
+                target="_blank"
+                >Visit my GitHub Profile</a
+              >
+            </div>
+            <div class="w-84">
+              <h4 class="text-lg italic border-t-2 border-black p-2">
+                Education
+              </h4>
+              <div class="p-2">
+                <p>
+                  Graduated with 8.0, At GCKVN DEGREE COLLEGE.
+                </p>
+                <p>Courses I Took:</p>
+                <p>-Object Oriented programing</p>
+                <p>-data Structures and Algorithams</p>
+                <p>-Web Engineering</p>
+                <p>-Artificial intelligence</p>
+                <p>-Human Computer Intraction</p>
+                <p>-Computer Graphics</p>
+                <p>-Data Base Management System</p>
+                <p>-Distributed Database Systems</p>
+                <p>-Discreet Mathematics</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h3 class="p-4 text-2xl italic">Reviews from my Teachers</h3>
+          <div class="flex flex-wrap justify-center">
+            <div class="border-2 border-black rounded-3xl p-4 w-72">
+              <p>
+                John Doe was a brilliant student; always stood out with his
+                assignments. Jane Doe
+              </p>
+              <p>Assistant Professor</p>
+            </div>
+            
+          </div>
+          <footer class="pt-28">
+            <h3 class="flex items-center justify-center pb-36 text-2xl italic">
+              all rights reserved 2025
+            </h3>
+          </footer>
+        </div>
       </div>
-      <div>
-        <ul class="nav">
-          <li>Home /</li>
-          <li>Articles /</li>
-          <li>Projects /</li>
-          <li>Contact</li>
-        </ul>
-      </div>
-    </header>
-
-    <div class="title">
-      <h1>Frontend Developer</h1>
-      <ul>
-        <li>Hard Skills: HTML, CSS, Bootstrap, JavaScript, React</li>
-      </ul>
     </div>
-
-    <section class="section">
-      <div class="left">
-        <h2>Projects</h2>
-        <ul>
-          <li>PlayAt</li>
-          <li>Job Search Portal</li>
-          <li>Calculator</li>
-        </ul>
+    <div class="h-auto w-full max-w-screen-md border-2 border-black">
+      <div class="p-6 flex justify-between">
+        <h4 class="text-lg">Dariyabi Shaik</h4>
+        <h4 class="text-lg">Home / Project / Article / Contact</h4>
       </div>
-
-      <div class="center">
-        <h2>Work Experience</h2>
-        <p><strong>Frontend Developer</strong></p>
-        <p>Solved all the Frontend Projects</p>
-        <p><a href="https://example.com">Visit my profile</a></p>
-        <p id="special"><strong>Open Source Work</strong></p>
-        <p>Contributed to 50 open-source projects.<br />Made my own project with 200 GitHub stars.</p>
-        <p><a href="https://github.com/shaikdariyabi/react-manipulation">My GitHub Profile</a></p>
+      <div class="flex items-center justify-center pb-24 py-24">
+        <h1 class="text-4xl italic">Frontend Developer</h1>
       </div>
-
-      <div class="right">
-        <h2>Education</h2>
-        <p>Graduated with a 8.0 CGPA.<br />GCKVN Degree College</p>
-        <p>Courses I took:</p>
-        <ul>
-          <li>JavaScript</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>React.js</li>
-        </ul>
-      </div>
-    </section>
-
-    <footer class="footer1">
-      <p><strong>Reviews from my Staff</strong></p>
-      <div class="f-content">
-        <div class="content">
-          <p>Dariyabi Shaik was a good developer.</p>
-          <cite>- Kanisum, HR</cite>
+      <div class="flex border-t-2 border-b-2 border-black justify-center">
+        <div class="border-r-2 border-black w-52">
+          <h3 class="border-b-2 border-black p-2 text-lg italic">projects</h3>
+          <p class="border-b-2 border-black p-2">HTML only Portfolio</p>
+          <p class="border-b-2 border-black p-2">Calculator</p>
+          <p class="border-b-2 border-black p-2">Quiz App</p>
+          <p class="border-b-2 border-black p-2">Countdown Timer</p>
+          <p class="p-2">Product Upcominig Page</p>
         </div>
-        <div class="content">
-          <p>Dariyabi Shaik does their work on time.</p>
-          <cite>- Kumar, Assistant Manager</cite>
+        <div class="border-r-2 border-black w-96">
+          <div class="border-b-2 border-black p-2">
+            <h3 class="text-lg italic">Work Experience</h3>
+            <p>roadmap.sh</p>
+            <p>Solved all the frontend projects</p>
+            <a
+              href="www.linkedin.com/in/dariyabi-shaik"
+              style="text-decoration: underline; color: blue"
+              >Visit my LinkedIn profile
+            </a>
+          </div>
+          <div>
+            <h4 class="p-2">Open Source Work</h4>
+            <p class="p-2">
+              Contributed to 50 opensource projects. Made my own projects with
+              200 GitHub Stars.
+            </p>
+            <a
+              class="p-2 underline text-blue-700"
+              href="https://github.com/shaikdariyabi/react-manipulation"
+              target="_blank"
+              >Visit my GitHub Profile</a
+            >
+          </div>
+        </div>
+        <div class="w-80 p-2">
+          <h4 class="text-lg italic">Education</h4>
+          <p>
+            Graduated with 8.0, At GCKVN DEGREE COLLEGE.
+          </p>
+          <p>Courses I Took:</p>
+          <p>-Object Oriented programing</p>
+          <p>-data Structures and Algorithams</p>
+          <p>-Web Engineering</p>
+          <p>-Artificial intelligence</p>
+          <p>-Human Computer Intraction</p>
+          <p>-Computer Graphics</p>
+          <p>-Data Base Management System</p>
+          <p>-Distributed Database Systems</p>
+          <p>-Discreet Mathematics</p>
         </div>
       </div>
-      <footer>
-        <h3>All rights reserved 2025</h3>
-      </footer>
-    </footer>
-  </div>
-
-</body>
-
+      <div>
+        <h3 class="p-4 text-2xl italic">Reviews from my Teachers</h3>
+        <div class="flex flex-wrap justify-center gap-8 p-12">
+          <div class="border-2 border-black rounded-3xl p-4 w-48">
+            <p>
+              John Doe was a brilliant student; always stood out with his
+              assignments. Jane Doe
+            </p>
+            <p>Assistant Professor</p>
+          </div>
+          <div class="border-2 border-black rounded-3xl p-4 w-48">
+            <p>
+              John Doe was a brilliant student; always stood out with his
+              assignments. Jane Doe
+            </p>
+            <p>Assistant Professor</p>
+          </div>
+          <div class="border-2 border-black rounded-3xl p-4 w-48">
+            <p>
+              John Doe was a brilliant student; always stood out with his
+              assignments. Jane Doe
+            </p>
+            <p>Assistant Professor</p>
+          </div>
+        </div>
+        <footer class="pt-38">
+          <h3 class="flex items-center justify-center pb-36 text-2xl italic">
+            all rights reserved 2025
+          </h3>
+        </footer>
+      </div>
+    </div>
+  </body>
 </html>
