--- a/index.html
+++ b/index.html
@@ -166,24 +166,21 @@
         <div class="flex flex-wrap justify-center gap-8 p-12">
           <div class="border-2 border-black rounded-3xl p-4 w-48">
             <p>
-              John Doe was a brilliant student; always stood out with his
-              assignments. Jane Doe
+              She always gives her best.
             </p>
-            <p>Assistant Professor</p>
+            <p>Class Teacher</p>
           </div>
           <div class="border-2 border-black rounded-3xl p-4 w-48">
             <p>
-              John Doe was a brilliant student; always stood out with his
-              assignments. Jane Doe
+              She always my favorite student.
             </p>
-            <p>Assistant Professor</p>
+            <p>Director</p>
           </div>
           <div class="border-2 border-black rounded-3xl p-4 w-48">
             <p>
-              John Doe was a brilliant student; always stood out with his
-              assignments. Jane Doe
+              Dariyabi Shaik was a brilliant student.
             </p>
-            <p>Assistant Professor</p>
+            <p>principal</p>
           </div>
         </div>
         <footer class="pt-38">
