--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <p>roadmap.sh</p>
               <p>Solved all the frontend projects</p>
               <a
-                href="www.linkedin.com/in/dariyabi-shaik"
+                href="https://www.linkedin.com/in/dariyabi-shaik/"
                 style="text-decoration: underline; color: blue"
                 >Visit my LinkedIn profile
               </a>
@@ -87,10 +87,9 @@
           <div class="flex flex-wrap justify-center">
             <div class="border-2 border-black rounded-3xl p-4 w-72">
               <p>
-                John Doe was a brilliant student; always stood out with his
-                assignments. Jane Doe
+                She always gives her best.
               </p>
-              <p>Assistant Professor</p>
+              <p>class Teacher</p>
             </div>
             
           </div>
@@ -125,7 +124,7 @@
             <p>roadmap.sh</p>
             <p>Solved all the frontend projects</p>
             <a
-              href="www.linkedin.com/in/dariyabi-shaik"
+              href="https://www.linkedin.com/in/dariyabi-shaik/"
               style="text-decoration: underline; color: blue"
               >Visit my LinkedIn profile
             </a>
